# pokepack

./: .gitignore  Cargo.toml  README.md  config.yaml  edge_case.txt  paste.txt  paste2.txt  paste3.txt
dex/: abilities.txt  items.txt  moves.txt  names.txt  natures.txt  teras.txt
dex_build/: index.js  package.json
public/: script.js  style.css
src/: binary.rs  codec.rs  dex.rs  error.rs  lib.rs  main.rs  parser.rs
